* Added support for lhasa handling LZH (.lzh, .lha) archives.
* Added support for lcap handling CAB (.cab) archives.
* Added support for shar handling SHAR (.shar) shell archives.
* Generate standalone Windows .exe and Linux .rpm installer.
* Initialize the internal MIME database correct on all platforms.
* Improved option compatibility for the ar, cpio and tar programs.


0.16 "Game of thrones" (released 12.5.2012)

* Document the --outdir option for the extract command.
  Closes: SF bug #3363964
* Added convenience library function to handle archives.
  Documentation for those functions can be found in
  doc/development.txt.
  Closes: SF bug #3351936
* Fix generating an RPM installer.
  Closes: SF bug #2977749
* Added support for the lbzip2 program handling BZIP2 archives.
* Added support for the plzip program handling LZIP archives.
* Prevent overwriting files with repack.
* Support extraction of BZIP2 (.bz2) files with the Python bz2 module.
* Support extraction of GZIP (.gz) files with the Python gzip module.
* Support extraction of ZIP (.zip) files with the Python zipfile module.
* Support extraction of TAR (.tar) files with the Python tarfile module.


0.15 "Contraband" (released 8.4.2012)

* Print help when unknown options are given.
* Print error when archive files do not exist.
* Added installation instructions in doc/install.txt
* Added support for the pigz program handling GZIP archives.


0.14 "Book of Dragons" (released 30.1.2012)

* Handle CRX (.crx) files as ZIP archives. They have garbage at
  the beginning of the file, but some unzip programs can cope with
  that.
* The xz program supports listing of XZ archives. Adjust the
  configuration accordingly.


0.13 "Megamind" (released 25.1.2011)

* Fix command argument order when extracting cpio archives.
* Added correct cpio MIME type on Debian systems.
* Added support for the clzip and pdlzip programs who are both capable
  of handling LZIP (.lz) archives.