@@ -13,7 +13,7 @@
 #
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
-from patoolib import util
+from .. import util
 
 def extract_singlefile_standard (archive, compression, cmd, **kwargs):
     """Standard routine to extract a singlefile archive (like gzip)."""
