@@ -14,9 +14,8 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 """Archive commands for the bzip2 program."""
-from patoolib import util
-from patoolib.programs import extract_singlefile_standard, \
-    test_singlefile_standard
+from .. import util
+from . import extract_singlefile_standard, test_singlefile_standard
 
 extract_bzip2 = extract_singlefile_standard
 test_bzip2 = test_singlefile_standard
