@@ -15,4 +15,4 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 """Archive commands for the pbzip2 program."""
 # bzip2 and lbzip2 are compatible
-from patoolib.programs.bzip2 import extract_bzip2, test_bzip2, create_bzip2
+from .bzip2 import extract_bzip2, test_bzip2, create_bzip2
