@@ -14,7 +14,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 """Archive commands for the lzma program."""
-from patoolib.programs import extract_singlefile_standard, \
+from . import extract_singlefile_standard, \
     test_singlefile_standard, create_singlefile_standard
 
 
