@@ -14,7 +14,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 """Archive commands for the tarfile Python module."""
-from patoolib import util
+from .. import util
 import tarfile
 
 READ_SIZE_BYTES = 1024*1024
